--- a/src/app/form2/form2.component.html
+++ b/src/app/form2/form2.component.html
@@ -8,8 +8,8 @@
                     <div class="col-md-3 register-left">
                         <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
                         <h3>Welcome</h3>
-                        <p>You have only 30 minites for this test!</p>
-                        <p>You have test this form<br>You can use any tools<br>Wish you all the best !</p>
+                        <p>Haulmatic QA Engineers Test</p>
+                        <p>You have to test this form<br>You can use any tools<br>Wish you all the best !</p>
                        
                      <!--   <input type="submit" name="" value="All the Best"/><br/> -->
                     </div>
